rustidy/tests/parse-error/whitespace_large_comment/output.txt
Error at tests/parse-error/whitespace_large_comment/input.rs:11:3:
    |
 11 | */
    |   ^
└─Expected a crate at 1:1
  └─Expected `*/` after `/*`
